testcases/miniGMG_full/hasnozero_experiment/hasnozero_out.txt
1 MPI Tasks of 52 threads
truncating the v-cycle at 2^3 subdomains
creating domain...       done
  32 x 32 x 32 (per subdomain)
  64 x 64 x 64 (per process)
  64 x 64 x 64 (overall)
  1-deep ghost zones
  allocated 34 MB
initializing alpha, beta, RHS for the ``hard problem''...
  average value of f =  -1.110223024625e-15
done
MGBuild...                      
  level= 0, eigenvalue_max ~= 1.999996e+00
  level= 1, eigenvalue_max ~= 1.999984e+00
  level= 2, eigenvalue_max ~= 1.999935e+00
  level= 3, eigenvalue_max ~= 1.999740e+00
  level= 4, eigenvalue_max ~= 1.998958e+00
done
MGSolve...                      
v-cycle= 1, norm=0.00104306832854682090 (1.043068e-03)
v-cycle= 2, norm=0.00008508167020989158 (8.508167e-05)
v-cycle= 3, norm=0.00001867174276554400 (1.867174e-05)
v-cycle= 4, norm=0.00000204150507727304 (2.041505e-06)
v-cycle= 5, norm=0.00000036859113979502 (3.685911e-07)
v-cycle= 6, norm=0.00000004500378137516 (4.500378e-08)
v-cycle= 7, norm=0.00000000777269404926 (7.772694e-09)
v-cycle= 8, norm=0.00000000096440667838 (9.644067e-10)
v-cycle= 9, norm=0.00000000016687878834 (1.668788e-10)
v-cycle=10, norm=0.00000000002055542257 (2.055542e-11)
v-cycle=11, norm=0.00000000000354951424 (3.549514e-12)
v-cycle=12, norm=0.00000000000043768760 (4.376876e-13)
v-cycle=13, norm=0.00000000000007507772 (7.507772e-14)
v-cycle=14, norm=0.00000000000000922492 (9.224916e-15)
v-cycle=15, norm=0.00000000000000159709 (1.597090e-15)
v-cycle=16, norm=0.00000000000000020680 (2.068041e-16)
done
MGSolve...                      
v-cycle= 1, norm=0.00104306832854682090 (1.043068e-03)
v-cycle= 2, norm=0.00008508167020989158 (8.508167e-05)
v-cycle= 3, norm=0.00001867174276554400 (1.867174e-05)
v-cycle= 4, norm=0.00000204150507727304 (2.041505e-06)
v-cycle= 5, norm=0.00000036859113979502 (3.685911e-07)
v-cycle= 6, norm=0.00000004500378137516 (4.500378e-08)
v-cycle= 7, norm=0.00000000777269404926 (7.772694e-09)
v-cycle= 8, norm=0.00000000096440667838 (9.644067e-10)
v-cycle= 9, norm=0.00000000016687878834 (1.668788e-10)
v-cycle=10, norm=0.00000000002055542257 (2.055542e-11)
v-cycle=11, norm=0.00000000000354951424 (3.549514e-12)
v-cycle=12, norm=0.00000000000043768760 (4.376876e-13)
v-cycle=13, norm=0.00000000000007507772 (7.507772e-14)
v-cycle=14, norm=0.00000000000000922492 (9.224916e-15)
v-cycle=15, norm=0.00000000000000159709 (1.597090e-15)
v-cycle=16, norm=0.00000000000000020680 (2.068041e-16)
done
                                  0            1            2            3            4 
                               32^3         16^3          8^3          4^3          2^3        total
smooth                     0.054568     0.007919     0.001500     0.000554     0.000000     0.064541
residual                   0.011451     0.000935     0.000166     0.000063     0.000048     0.012665
restriction                0.000585     0.000126     0.000058     0.000044     0.000000     0.000814
interpolation              0.000776     0.000153     0.000072     0.000047     0.000000     0.001048
applyOp                    0.000000     0.000000     0.000000     0.000000     0.000227     0.000227
BLAS1                      0.002378     0.000132     0.000066     0.000046     0.002076     0.004698
BLAS3                      0.000000     0.000000     0.000000     0.000000     0.000000     0.000000
communication              0.023627     0.006128     0.001561     0.000668     0.000334     0.032318
  local exchange           0.023612     0.006116     0.001548     0.000655     0.000328     0.032259
--------------         ------------ ------------ ------------ ------------ ------------ ------------ 
Total by level             0.093403     0.015350     0.003422     0.001436     0.002714     0.116325

  Total time in MGBuild       0.001530
  Total time in MGSolve       0.116495
              " v-cycles      0.116386
      number of v-cycles            16
Bottom solver iterations            41


Error test: h = 1.562500e-02, max = 3.529713e-04
Error test: h = 1.562500e-02, L2  = 5.559940e-05
deallocating domain...   done
